#38 removal of preview features